--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.5",
+    "next": "^9.5.5",
+    "next-auth": "^3.1.0",
     "postcss-nested": "^4.2.3",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "tailwindcss": "^1.9.4"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "tailwindcss": "^1.9.5"
   }
 }
