--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "next": "^9.5.5",
     "next-auth": "^3.1.0",
+    "next-on-netlify": "^2.5.1",
     "postcss-nested": "^4.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
