--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "postbuild": "next-on-netlify"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "next": "^9.5.5",
     "next-auth": "^3.1.0",
     "next-on-netlify": "^2.5.1",
     "postcss-nested": "^4.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "tailwindcss": "^1.9.5"
+    "tailwindcss": "^1.9.5",
+    "zustand": "^3.1.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2"
   }
 }
