--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postcss-nested": "^4.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "tailwindcss": "^1.9.5",
+    "tailwindcss": "^2.0.0-alpha.1",
     "zustand": "^3.1.3"
   },
   "devDependencies": {
